Add support for musepack (mpc) sv8 audio

https://bugzilla.gnome.org/show_bug.cgi?id=732682